name:                 TellMeT
version:              0.1.0.0
license:              BSD3
license-file:         LICENSE
copyright:            (c) 2018 David Maze
author:               David Maze
homepage:             https://github.com/dmaze/TellMeT
bug-reports:          https://github.com/dmaze/TellMeT/issues
synopsis:             Display GTFS transit data
category:             Web
build-type:           Simple
cabal-version:        >=1.10
data-files:           dist/*.js
                    , dist/*.eot
                    , dist/*.svg
                    , dist/*.ttf
                    , dist/*.woff

library
  ghc-options:        -O2 -Wall
  ghcjs-options:      -dedupe
  hs-source-dirs:     shared
  exposed-modules:    TellMeT.Action
                    , TellMeT.Action.Class
                    , TellMeT.Bootstrap
                    , TellMeT.Components.Chrome
                    , TellMeT.Components.DirectionPicker
                    , TellMeT.Components.FeedFetcher
                    , TellMeT.Components.Pages
                    , TellMeT.Components.RouteBadge
                    , TellMeT.Components.RouteList
                    , TellMeT.Components.RoutePage
                    , TellMeT.Components.ServicePicker
                    , TellMeT.GTFS
                    , TellMeT.Model
                    , TellMeT.Model.Class
                    , TellMeT.Model.Fetcher
                    , TellMeT.Model.Selectors
                    , TellMeT.Pages
                    , TellMeT.REST
                    , TellMeT.Routes
                    , TellMeT.Util
  build-depends:      aeson          >= 0.11.0 && < 1.4
                    , base           >= 4.9  && < 5
                    , bytestring     >= 0.10 && < 0.11
                    , cassava        >= 0.4  && < 0.5
                    , containers     >= 0.5  && < 0.6
                    , data-default   >= 0.7  && < 0.8
                    , http-api-data  >= 0.2  && < 0.3
                    , microlens      >= 0.4  && < 0.5
                    , microlens-ghc  >= 0.4  && < 0.5
                    , microlens-mtl  >= 0.1  && < 0.2
                    , miso           >= 0.20 && < 0.21
                    , mtl            >= 2.2  && < 2.3
                    , network-uri    >= 2.6  && < 2.7
                    , servant        >= 0.8  && < 0.14
                    , text           >= 1.2  && < 1.3
                    , time           >= 1.6  && < 1.7
  if impl(ghcjs)
    build-depends:    ghcjs-base     >= 0.2  && < 0.3
  default-language:   Haskell2010
                      
executable server
  main-is:            Main.hs
  if impl(ghcjs)
    buildable:        False
  else
    ghc-options:      -O2 -threaded -Wall
    hs-source-dirs:   server
    other-modules:    Paths_TellMeT
                    , TellMeT.Server.GTFS
    build-depends:    TellMeT
                    , base           >= 4.9  && < 5
                    , bytestring     >= 0.10 && < 0.11
                    , cassava        >= 0.4  && < 0.5
                    , containers     >= 0.5  && < 0.6
                    , data-default   >= 0.7  && < 0.8
                    , http-types     >= 0.9  && < 0.13
                    , lucid          >= 2.9  && < 2.10
                    , microlens      >= 0.4  && < 0.5
                    , microlens-ghc  >= 0.4  && < 0.5
                    , microlens-mtl  >= 0.1  && < 0.2
                    , miso           >= 0.20 && < 0.21
                    , mtl            >= 2.2  && < 2.3
                    , network-uri    >= 2.6  && < 2.7
                    , servant        >= 0.8  && < 0.14
                    , servant-lucid  >= 0.7  && < 0.9
                    , servant-server >= 0.8  && < 0.14
                    , text           >= 1.2  && < 1.3
                    , wai            >= 3.2  && < 3.3
                    , wai-extra      >= 3.0  && < 3.1
                    , warp           >= 3.2  && < 3.3
                    , zip-archive    >= 0.3  && < 0.4
    default-language: Haskell2010

executable ui
  main-is:            Main.hs
  if !impl(ghcjs)
    buildable:        False
  else
    ghcjs-options:    -dedupe
    hs-source-dirs:   ui
    other-modules:    TellMeT.UI.Fetcher
                    , TellMeT.UI.Update
    build-depends:    TellMeT
                    , base           >= 4.9  && < 5
                    , containers     >= 0.5  && < 0.6
                    , data-default   >= 0.7  && < 0.8
                    , ghcjs-base     >= 0.2  && < 0.3
                    , microlens      >= 0.4  && < 0.5
                    , microlens-mtl  >= 0.1  && < 0.2
                    , miso           >= 0.20 && < 0.21
                    , mtl            >= 2.2  && < 2.3
                    , network-uri    >= 2.6  && < 2.7
                    , servant        >= 0.8  && < 0.14
    default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      TellMeT.Tests.GTFS
  build-depends:      TellMeT
                    , base           >= 4.9  && < 5
                    , smallcheck     >= 1.1 && < 1.2
                    , tasty          >= 0.11 && < 0.12
                    , tasty-smallcheck >= 0.8 && < 0.9
  default-language:   Haskell2010
